<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"

    android:id="@+id/layoutMain"
    android:background="@color/background_1"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sectionbar_height"
        android:id="@+id/layoutSectionBar">
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:text="@string/sectionTag1"
            android:clickable="false"
            android:id="@+id/section01"
            android:gravity="center"
            android:textColor="@color/text_heading1"
            android:background="@color/sectionBar"
            android:textSize="@dimen/abc_text_size_large_material"
            android:onClick="sectionBarAction"/>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:text="@string/sectionTag2"
            android:clickable="false"
            android:id="@+id/section02"
            android:gravity="center"
            android:textColor="@color/text_heading1"
            android:background="@color/sectionBar"
            android:textSize="@dimen/abc_text_size_large_material"
            android:onClick="sectionBarAction"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/sectionTag3"
            android:clickable="true"
            android:id="@+id/section03"
            android:gravity="center"
            android:textColor="@color/text_heading1"
            android:background="@color/sectionBar"
            android:textSize="@dimen/abc_text_size_large_material"
            android:onClick="sectionBarAction"/>

    </LinearLayout>


</RelativeLayout>
