<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/sectionbar_height"
    android:background="@color/background_3"
    android:id="@+id/busfinder_layout"
    tools:context="com.surjith.gpsandsensorrecorder.BusFinderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mapfragment_height"
        android:orientation="horizontal"
        android:id="@+id/mapFragment"
        android:layout_alignParentTop="true">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map_fragment"
            android:name="com.google.android.gms.maps.MapFragment">

        </fragment>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/mapFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/linear0"
            android:layout_below="@id/mapFragment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:text="@string/mapInfo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:id="@+id/txtProgress"
                android:text=""/>

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:id="@+id/linear1"
            android:layout_below="@id/linear0">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="1"
                android:text="@string/sourTag"
                android:id="@+id/sourTag" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/txtSour"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:editable="false"
                android:clickable="true"
                android:background="#fff"
                android:layout_weight="2" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:id="@+id/linear2"
            android:layout_below="@id/linear1">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="1"
                android:text="@string/destTag"
                android:id="@+id/destTag" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:editable="false"
                android:clickable="true"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/txtDest"
                android:background="#fff"
                android:layout_weight="2" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:id="@+id/linear3"
            android:layout_below="@id/linear2">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/timeTag"
                android:id="@+id/timeTag" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:editable="false"
                android:text=""
                android:id="@+id/txtTime"
                android:background="#fff"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:id="@+id/linear4"
            android:layout_below="@id/linear3">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/resetBtn"

                android:id="@+id/btnReset"
                android:layout_weight="1"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/findBtn"

                android:id="@+id/btnFind"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
